...
        child: ListView(
          physics: AlwaysScrollableScrollPhysics(),
          children: [
            Padding(
              padding: EdgeInsets.fromLTRB(16, 16, 16, 4),
              child: ButtonCard(
                key: ValueKey("scale_page_button"),
                icon: Icon(
                  CustomIcons.MyFlutterApp.music_notes,
                  size: 48,
                  color: Color.fromRGBO(200, 0, 0, 1),
                ),
                onPressed: () async {
...
                subtitleSize: 20,
              ),
            ),
            Padding(
              padding: EdgeInsets.fromLTRB(16, 16, 16, 4),
              child: ButtonCard(
                key: ValueKey("progression_page_button"),
                icon: Icon(
                  CustomIcons.MyFlutterApp.prog,
                  size: 48,
                  color: Colors.green,
                ),
                onPressed: () async {
...
