...
                    Text(
                      "Key",
                      style: TextStyle(
                          fontSize: 20, color: Color.fromRGBO(50, 50, 50, 1)),
                    ),
                    DropdownButton<Note>(
                      key: ValueKey("progression_key_dropdown_button"),
                      hint: Text(
                        selectedKey,
                        style: TextStyle(fontSize: 20, color: Colors.blue),
                      ),
                      items: notes.map((Note value) {
                        return DropdownMenuItem<Note>(
...
                      Text(
                        "Chord",
                        style: TextStyle(
                            fontSize: 20, color: Color.fromRGBO(50, 50, 50, 1)),
                      ),
                      DropdownButton<Scale>(
                        key: ValueKey("progression_chord_dropdown_button"),
                        hint: Text(
                          progmode,
                          style:
                              TextStyle(fontSize: 20, color: Colors.deepPurple),
                        ),
                        items: scales.map((Scale value) {
...
