...
];
List<SmallChord> dimChords = [
  SmallChord("Adim", "dim", 0),
  SmallChord("A#dim", "dim", 1),
  SmallChord("Bdim", "dim", 2),
  SmallChord("Cdim", "dim", 3),
  SmallChord("C#dim", "dim", 4),
  SmallChord("Ddim", "dim", 5),
  SmallChord("D#dim", "dim", 6),
  SmallChord("Edim", "dim", 7),
  SmallChord("Fdim", "dim", 8),
  SmallChord("F#dim", "dim", 9),
  SmallChord("Gdim", "dim", 10),
...
